fix(Cite): Wrap standalone citations in brackets

--- a/src/extensions/cite-numeric/styles.css
+++ b/src/extensions/cite-numeric/styles.css
@@ -15,10 +15,21 @@
   }
 }
 
+:not(:--CiteGroup) > :--Cite {
+  &::before {
+    content: '[';
+  }
+  &::after {
+    content: ']';
+  }
+}
+
+/* Show numeric citation format */
 :--Cite > a > :first-child {
   display: inline;
 }
 
+/* Hide author-date citation format */
 :--Cite > a > :last-child {
   display: none;
 }
